--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Agustin Abdala</title>
-  <link rel="stylesheet" href="Home.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="icon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
 <body>
     <header>
       <section>
-        <a id="nombre" href="Home.html"> AGUSTIN ABDALA </a>
+        <a id="nombre" href="index.html"> AGUSTIN ABDALA </a>
       </section>
       <section>
         <a id="botonPortfolio" href="#">PORTFOLIO</a>
