--- a/enConstruccion/enCosnstruccion.html
+++ b/enConstruccion/enCosnstruccion.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="../icon.png">
 </head>
 <body>
-        <h1 class="texto1">Perdón, la perfeccion lleva tiempo :(</h1>
+        <h1 class="texto1">Perdón :(</h1>
         <h2 class="texto2">Esta parte de la pagina esta en construccion.</h2>
         <h2 class="texto3"> Tocando el gif del gatito podes volver a la pagina principal.</h2>
         <a href="../index.html"><img src="sad.gif" alt="gatito tirste :(" class="gatitoTriste"></a>
