--- a/index.html
+++ b/index.html
@@ -73,6 +73,72 @@
         <a href="fotos/img14.jpg" class="img14">
           <ion-icon name="expand-outline"></ion-icon>
         </a>
+        <a href="fotos/img15.jpg" class="img15">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img16.jpg" class="img16">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img17.jpg" class="img17">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img18.jpg" class="img18">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img19.jpg" class="img19">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img20.jpg" class="img20">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img21.jpg" class="img21">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img22.jpg" class="img22">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img23.jpg" class="img23">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img24.jpg" class="img24">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img25.jpg" class="img25">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img26.jpg" class="img26">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img27.jpg" class="img27">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img28.jpg" class="img28">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img29.jpg" class="img29">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img30.jpg" class="img30">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img31.jpg" class="img31">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img32.jpg" class="img32">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img33.jpg" class="img33">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img34.jpg" class="img34">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img35.jpg" class="img35">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
+        <a href="fotos/img36.jpg" class="img36">
+          <ion-icon name="expand-outline"></ion-icon>
+        </a>
 
       </div>
     </div>
