--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Agustin Abdala</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="header.css">
   <link rel="shortcut icon" href="icon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,16 +16,15 @@
 
 <body>
     <header>
-      <section>
-        <a id="nombre" href="index.html"> AGUSTIN ABDALA </a>
-      </section>
-      <section class="barraBotones">
-        <a class="botonPortfolio">PORTFOLIO</a>
-        <a class="botonesFalsosP" href="enConstruccion/enCosnstruccion.html">|PORTFOLIO|</a>
-        <a class="botones">ABOUT</a>
-        <a class="botonesFalsos" href="enConstruccion/enCosnstruccion.html">|ABOUT|</a>
-        <a class="botones">CONTACT</a>
-        <a class="botonesFalsos" href="enConstruccion/enCosnstruccion.html">|CONTACT|</a>
+      <section class="headerContainer">
+        <div id="nombre">
+          <a href="index.html">AGUSTIN ABDALA </a>
+        </div>
+        <section class="barraBotones">
+          <a class="botonHeader">PORTFOLIO</a>
+          <a class="botonHeader">ABOUT</a>
+          <a class="botonHeader">CONTACT</a>
+        </section>
       </section>
     </header>
 
